[project]
name = "crypto-daytrading-arena"
version = "0.1.0"
description = "Multi-agent crypto daytrading arena powered by Calfkit"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "calfkit>=0.1.10",
    "httpx>=0.27",
    "plotext>=5.3.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.0.0",
    "sympy>=1.13",
    "websockets>=16.0",
]

[project.optional-dependencies]
topstepx = [
    "signalrcore>=0.9.5",  # Required for TopstepX SignalR WebSocket
]
